argocd/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: argocd-httpproxy
  namespace: argocd
spec:
  virtualhost:
    fqdn: argocd.devops.tanzu-altair.com
  routes:
    - services:
        - name: argocd-server
          port: 80
    - services:
        - name: argocd-server
          port: 443
